--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,6 @@
     "skipLibCheck": true,
     "outDir": "dist"
   },
-  "include": ["src/**/*.ts", "bin/**/*.ts", "*.ts"]
+  "include": ["src/**/*.ts", "bin/**/*.ts", "*.ts"],
+  "types": ["node"]
 }
